# jepa-cook

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml  ruff.toml
jepa_cook/: config.yaml
jepa_cook/src/: cli.py  config.py  dataset.py  diagnostics.py  inference.py  loss.py  main.py  models.py  train.py  trainer.py
scripts/: cli.py  filter_dataset.py  hf_inference_example.py
